# openclaw-auntie-browser

./: .env  AGENT_FLOW_API_SCHEMA.json  AGENT_FLOW_ARCHITECTURE.md  AGENT_FLOW_INDEX.md  AGENT_FLOW_PHASE1_CHECKLIST.md  AGENT_FLOW_QUICKSTART.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  unocss.config.ts  vite.config.ts
.agent/: AGENTS.md
.claude/: settings.local.json
.claude/agents/: version-release-agent.md
.cursor/rules/: oclaw.mdc  openclaw-browser.mdc
.github/workflows/: ci.yml  release.yml
openclaw-skill/: SKILL.md  bridge.ts
public/document/: test-ws.js
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  api.rs  config.rs  configure.rs  flows.rs  gateway.rs  installer.rs  lib.rs  main.rs  openclaw_http.rs  openclaw_process.rs  skills.rs
src-tauri/src/webview/: commands.rs  rect.rs
src/api/: agents.ts  flows.ts  gateway.ts  installer.ts  onboard.ts  openclaw.ts  skills.ts  webview.ts
src/components/: AgentAddWizard.vue  FlowExecutionCard.vue  OnboardOverlay.vue  OnboardWizardOverlay.vue  OpenclawPage.vue  SettingsPage.vue  SkillsPage.vue  TabBar.vue
src/composables/: useAutoSetup.ts
src/layouts/: default.vue
src/pages/: index.vue
src/stores/: agents.ts  app.ts  flows.ts  installer.ts  onboard.ts  openclaw.ts  profile.ts  settings.ts  tabs.ts
src/utils/: crypto.ts
src/views/: AgentEditorPage.vue  AgentsPage.vue  FlowEditorPage.vue  OpenclawPage.vue  SettingsPage.vue  SetupPage.vue  SkillsPage.vue
(+3 files in other folders)
