[package]
name = "openclaw-auntie-browser"
version = "0.1.0"
description = "OpenClaw dedicated browser - Tauri backend"
authors = ["you"]
edition = "2021"

[lib]
name = "openclaw_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
