[package]
name = "claw-browser"
version = "1.2.29"
description = "Oclaw - Tauri backend (browser for OpenClaw)"
authors = ["you"]
edition = "2021"

[lib]
name = "claw_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "net", "sync", "io-util", "rt-multi-thread", "macros", "process"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = { version = "0.21", features = ["connect", "native-tls"] }
futures-util = "0.3"
url = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
vt100 = "0.15"

[target.'cfg(unix)'.dependencies]
pty-process = { version = "0.5", features = ["async"] }
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"
